--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>My First GitHub Page</title>
+<title>JABU CIGS</title>
 
 <link rel="stylesheet" href="styles.css">
 
